fixed bug with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body.black *::selection {
 }
 
 header {
+  z-index: 5;
   opacity: 0;
   position: fixed;
   padding: 10px;
@@ -533,7 +534,7 @@ body.white .portfolio__el {
   justify-content: center;
   width: 100%;
   height: 100vh;
-  z-index: 100;
+  z-index: 10;
   background-color: black;
   flex-direction: column;
 }
