--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,4 +1,5 @@
 header {
+    z-index: 5;
     opacity: 0;
     position: fixed;
     padding: 10px;
