--- a/scss/_preload.scss
+++ b/scss/_preload.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
-    z-index: 100;
+    z-index: 10;
     background-color: black;
     flex-direction: column;
 
